# fastapi-template

./: .coverage  .env.example  .env.test  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  gitlab-ci.yml  pyproject.toml
.github/workflows/: build_docker.yml  ci.yml  lint-and-test.yml
alembic/: env.py
alembic/versions/: 1c6e1c955af4_init.py
app/: initial_data.py  models.py  repositories.py  schemas.py
app/api/: deps.py  main.py
app/api/routes/: login.py  private.py  users.py  utils.py
app/api/v1/: api_v1.py
app/api/v1/endpoints/: login.py  users.py
app/core/: config.py  db.py  security.py
app/models/: base.py  user.py
app/providers/: storage.py
app/repositories/: user_repo.py
app/schemas/: base.py  users.py
app/services/: user.py  user_service.py
app/utils/: utils.py
app/workers/: celery_app.py
tests/: conftest.py
tests/api/routes/: test_login.py  test_private.py  test_users.py  test_utils.py
tests/api/v1/endpoints/: test_login.py  test_users.py
tests/providers/: test_storage.py
tests/services/: test_user.py  test_user_service.py
